--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -34,7 +34,7 @@
 
                 .song {
                     width: 330px;
-                    color: #f7f7f7;
+                    color: #000000;
                     overflow: hidden;
                     margin-top: 3px;
                     font-size: 24px;
